using UnityEngine;

public class Ghost : Enemy
{
    
}

